<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/smart_charge"
        android:textSize="38sp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textSize="22sp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="22sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:text="@string/sign_in"

        android:textColor="#1495d7"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/don_t_have_an_account"/>
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            android:textAllCaps="false"/>

    </LinearLayout>

    <!--<Button
        android:id="@+id/btnforgotPwd"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="Forgot Password?"
        android:textAllCaps="false"/>-->
</LinearLayout>